[tool.poetry]
name = "gev"
version = "0.0.0"
description = "General Events Manager"
readme = "README.md"
homepage = "https://github.com/wonderbeyond/gev"
repository = "https://github.com/wonderbeyond/gev"
documentation = "https://github.com/wonderbeyond/gev"
keywords = ["python", "events"]
authors = ["Wonder <wonderbeyond@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = 'pep440'
pattern = 'default-unprefixed'

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^7.1.2", optional = true}
pytest-asyncio = {version = "^0.20.2", optional = true}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[tool.poetry.extras]
testing = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
